removed http:// and only kept file name

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ body {
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
               <a href="#"><img src="Gamevengers.png" height="35%" width="20%"></a>
-              <a href="http://project/about.html">About </a>
-              <a href="http://project/indexgallery.html">Index Gallery</a>
-              <a href="http://project/artcovers.html">Xbox Customised Covers</a>
+              <a href="about.html">About </a>
+              <a href="indexgallery.html">Index Gallery</a>
+              <a href="artcovers.html">Xbox Customised Covers</a>
             </div>
           </div>
           
@@ -98,17 +98,17 @@ body {
           <div id="abc">
               <nav>
                   <ul>
-                    <li><a href="http://project/homepage.html">Home</a></li>
-                    <li> <div class="dropdown"><button class="dropbtn"><a href="#">Controllers</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="http://project/xcontrollers.html">Xbox Controllers</a><a href="http://project/pscontrollers.html">PS Controllers</a></div></li>
-                    <li><div class="dropdown"><button class="dropbtn"><a href="#">Consoles</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="http://project/xconsoles.html">Xbox Consoles</a><a href="http://project/psconsoles.html">PS Consoles</a></div></li>
-                    <li><div class="dropdown"><button class="dropbtn"><a href="#">Games</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="http://project/xgames.html">Xbox Games</a><a href="http://project/psgames.html">PS Games</a></div></li>
-                    <a href="http://project/Adminlogin.html"><button class="btnn success">Admin Login</button></a>
+                    <li><a href="/homepage.html">Home</a></li>
+                    <li> <div class="dropdown"><button class="dropbtn"><a href="#">Controllers</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="xcontrollers.html">Xbox Controllers</a><a href="pscontrollers.html">PS Controllers</a></div></li>
+                    <li><div class="dropdown"><button class="dropbtn"><a href="#">Consoles</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="xconsoles.html">Xbox Consoles</a><a href="psconsoles.html">PS Consoles</a></div></li>
+                    <li><div class="dropdown"><button class="dropbtn"><a href="#">Games</a><i class="fa fa-caret-down"></i></button><div class="dropdown-content"><a href="xgames.html">Xbox Games</a><a href="psgames.html">PS Games</a></div></li>
+                    <a href="Adminlogin.html"><button class="btnn success">Admin Login</button></a>
                   </ul>
                </nav>
             
                <h1>Xbox Wireless<br> Controllers</h1>
                 <h2>All new xbox controllers designed<br>for enhanced comfort.</h2>
-                <a href="http://project/xcontrollers.html"><button class="button">Shop Now</button></a>
+                <a href="xcontrollers.html"><button class="button">Shop Now</button></a>
 
           </div>
 
@@ -120,7 +120,7 @@ body {
             <h5>FIFA19</h5>
             <div class="xbox360">Xbox 360</div>
             <div class="pa">Multiplayer game, with kinect <br> connection callout and added features.</div>
-            <a href="http://project/xbox360fifa19g.html"><button class="button2">Buy now</button></a>
+            <a href="xbox360fifa19g.html"><button class="button2">Buy now</button></a>
           </div>
           </div>
 
